crates/core/tests/ui/proc/ty/field_non_wire.stderr
error[E0277]: the trait bound `Bar: WireIO` is not satisfied
  --> tests/ui/proc/ty/field_non_wire.rs:32:5
   |
32 |     y: Bar,
   |     ^^^^^^ unsatisfied trait bound
   |
help: the trait `WireIO` is not implemented for `Bar`
  --> tests/ui/proc/ty/field_non_wire.rs:8:1
   |
 8 | struct Bar;
   | ^^^^^^^^^^
   = help: the following other types implement trait `WireIO`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
   = help: see issue #48214
